--- a/webapp/src/index.html
+++ b/webapp/src/index.html
@@ -5,8 +5,8 @@
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#ff00af" />
-    <title>DeFi</title>
-    <meta name="description" content="DeFi" />
+    <title>DeFi Wallet</title>
+    <meta name="description" content="DeFi Wallet" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <base href="/" />
 
